# Command-Line-Interpreter

./: CMakeLists.txt  README.md  main.cpp
Commands/: Command.cpp  Command.h
Commands/BuiltInCommands/: Batch.cpp  Batch.h  Date.cpp  Date.h  Echo.cpp  Echo.h  Head.cpp  Head.h  Prompt.cpp  Prompt.h  RM.cpp  RM.h  TR.cpp  TR.h  Time.cpp  Time.h  Touch.cpp  Touch.h  Truncate.cpp  Truncate.h  WC.cpp  WC.h
Exceptions/: Exception.h
Exceptions/BuiltInExceptions/: ArgumentHasToBeSupportedException.h  ArgumentNotSupportedException.h  CommandFormatException.h  CreateFileNotSupportedException.h  FileAlreadyExistException.h  FileNotFoundException.h  FileOpenException.h  NumberCriteriaException.h  OptionHasToBeSupportedException.h  OptionNotSupportedException.h  UnableToCreateFile.h  UnexpectedCharactersException.h  UnknownCommandException.h
Interpreter/: Interpreter.cpp  Interpreter.h  Parser.cpp  Parser.h
